--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
     <link rel="icon" href="profilepic.jpg" type="image/x-icon">
 		<meta charset="utf-8">
-		<title>MUSIC VISUAL - COLLIN XANDER</title>
+		<title>SOUND VISUAL - COLLIN XANDER</title>
 
 		<style>
       body {
@@ -323,7 +323,7 @@
     </audio>
     
     <div class="credits">
-      <div>3D Model Created & Developed by Collin Xander</div>
+      <div>3D Website Created & Developed by Collin Xander</div>
     </div>
     
 		<script type="module" src="./main.js"></script>
