--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
     <link rel="icon" href="profilepic.jpg" type="image/x-icon">
 		<meta charset="utf-8">
-		<title>SOUND VISUAL - COLLIN XANDER</title>
+		<title>SOUND VISUALIZER - COLLIN XANDER</title>
 
 		<style>
       body {
