--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
     <link rel="icon" href="profilepic.jpg" type="image/x-icon">
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>SOUND VISUALIZER - COLLIN XANDER</title>
 
 		<style>
@@ -101,7 +102,7 @@
         position: absolute;
         bottom: 20px;
         right: 20px;
-         color: #00aaff;
+        color: #00aaff;
         font-size: 0.8rem;
         opacity: 0.5;
         text-align: right;
@@ -266,6 +267,138 @@
       .editor-button:hover {
         background: rgba(0, 170, 255, 0.4);
       }
+
+      /* Media Queries for Mobile Devices */
+      @media screen and (max-width: 768px) {
+        .icon {
+          font-size: 32px;
+          padding: 15px;
+        }
+
+        h1 {
+          font-size: 2.5rem;
+          letter-spacing: 0.6rem;
+        }
+
+        .border {
+          width: 250px;
+        }
+
+        #progress {
+          font-size: 1.2rem;
+        }
+
+        #progress-container {
+          width: 280px;
+        }
+
+        #play-button {
+          padding: 15px 30px;
+          font-size: 1.2rem;
+        }
+
+        .instructions {
+          top: 70px;
+          right: 10px;
+          font-size: 1rem;
+          padding: 15px;
+          max-width: 180px;
+        }
+
+        .instructions h3 {
+          font-size: 1.3rem;
+          margin-bottom: 10px;
+        }
+
+        .instructions p {
+          margin-bottom: 10px;
+          line-height: 1.4;
+        }
+
+        #visualizer-container {
+          width: 250px;
+          height: 50px;
+          left: 50%;
+          transform: translateX(-50%);
+        }
+
+        .credits {
+          font-size: 1rem;
+          bottom: 10px;
+          right: 10px;
+        }
+
+        #current-lyric {
+          font-size: 1.8rem;
+        }
+
+        #next-lyric {
+          font-size: 1.1rem;
+        }
+      }
+
+      /* Media Queries for Small Mobile Devices */
+      @media screen and (max-width: 480px) {
+        .icon {
+          font-size: 28px;
+          padding: 10px;
+        }
+
+        h1 {
+          font-size: 2rem;
+          letter-spacing: 0.4rem;
+        }
+
+        .border {
+          width: 200px;
+        }
+
+        #progress {
+          font-size: 1.1rem;
+        }
+
+        #progress-container {
+          width: 250px;
+        }
+
+        #play-button {
+          padding: 12px 25px;
+          font-size: 1.1rem;
+        }
+
+        .instructions {
+          position: fixed;
+          top: auto;
+          bottom: 150px;
+          right: 10px;
+          font-size: 0.9rem;
+          padding: 10px;
+          max-width: 150px;
+          background: rgba(0, 0, 0, 0.7);
+        }
+
+        .instructions h3 {
+          font-size: 1.1rem;
+        }
+
+        .instructions p {
+          line-height: 1.3;
+        }
+
+        #visualizer-container {
+          width: 200px;
+          height: 40px;
+        }
+
+        .credits {
+          font-size: 0.9rem;
+          opacity: 0.7;
+        }
+
+        .audio-controls {
+          bottom: 60px;
+        }
+      }
 		</style>
 
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
@@ -329,3 +462,4 @@
 		<script type="module" src="./main.js"></script>
 	</body>
 </html>
+
