--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" href="profilepic.jpg" type="image/x-icon">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="theme-color" content="#000000">
 		<title>SOUND VISUALIZER - COLLIN XANDER</title>
 
 		<style>
@@ -271,17 +272,97 @@
       /* Media Queries for Mobile Devices */
       @media screen and (max-width: 768px) {
         .icon {
-          font-size: 32px;
+          font-size: 36px;
           padding: 15px;
+          display: block;
+          text-align: center;
         }
 
         h1 {
-          font-size: 2.5rem;
+          font-size: 2.8rem;
           letter-spacing: 0.6rem;
         }
 
         .border {
-          width: 250px;
+          width: 280px;
+        }
+
+        #progress {
+          font-size: 1.3rem;
+        }
+
+        #progress-container {
+          width: 300px;
+        }
+
+        #play-button {
+          padding: 16px 32px;
+          font-size: 1.3rem;
+          min-width: 200px;
+        }
+
+        .instructions {
+          top: auto;
+          bottom: 150px;
+          right: 15px;
+          font-size: 1.1rem;
+          padding: 15px;
+          max-width: 220px;
+          background: rgba(0, 0, 0, 0.8);
+          border: 1px solid rgba(0, 170, 255, 0.3);
+        }
+
+        .instructions h3 {
+          font-size: 1.4rem;
+          margin-bottom: 12px;
+          color: #00aaff;
+        }
+
+        .instructions p {
+          margin-bottom: 12px;
+          line-height: 1.5;
+        }
+
+        #visualizer-container {
+          width: 280px;
+          height: 60px;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: 30px;
+          border: 1px solid rgba(0, 170, 255, 0.3);
+        }
+
+        .credits {
+          font-size: 1rem;
+          bottom: 15px;
+          right: 15px;
+          opacity: 0.8;
+          text-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
+        }
+
+        #current-lyric {
+          font-size: 2rem;
+        }
+
+        #next-lyric {
+          font-size: 1.2rem;
+        }
+      }
+
+      /* Media Queries for Small Mobile Devices */
+      @media screen and (max-width: 480px) {
+        .icon {
+          font-size: 32px;
+          padding: 12px;
+        }
+
+        h1 {
+          font-size: 2.2rem;
+          letter-spacing: 0.4rem;
+        }
+
+        .border {
+          width: 220px;
         }
 
         #progress {
@@ -295,66 +376,62 @@
         #play-button {
           padding: 15px 30px;
           font-size: 1.2rem;
+          min-width: 180px;
         }
 
         .instructions {
-          top: 70px;
+          position: fixed;
+          bottom: 140px;
           right: 10px;
           font-size: 1rem;
-          padding: 15px;
+          padding: 12px;
           max-width: 180px;
+          background: rgba(0, 0, 0, 0.85);
+          border-radius: 8px;
         }
 
         .instructions h3 {
-          font-size: 1.3rem;
+          font-size: 1.2rem;
           margin-bottom: 10px;
         }
 
         .instructions p {
-          margin-bottom: 10px;
           line-height: 1.4;
+          margin-bottom: 10px;
         }
 
         #visualizer-container {
-          width: 250px;
+          width: 240px;
           height: 50px;
-          left: 50%;
-          transform: translateX(-50%);
+          bottom: 25px;
         }
 
         .credits {
-          font-size: 1rem;
+          font-size: 0.9rem;
+          opacity: 0.9;
           bottom: 10px;
           right: 10px;
         }
 
-        #current-lyric {
-          font-size: 1.8rem;
-        }
-
-        #next-lyric {
-          font-size: 1.1rem;
+        .audio-controls {
+          bottom: 85px;
         }
       }
 
-      /* Media Queries for Small Mobile Devices */
-      @media screen and (max-width: 480px) {
+      /* Media Queries for Extra Small Devices */
+      @media screen and (max-width: 360px) {
         .icon {
           font-size: 28px;
           padding: 10px;
         }
 
         h1 {
-          font-size: 2rem;
-          letter-spacing: 0.4rem;
+          font-size: 1.8rem;
+          letter-spacing: 0.3rem;
         }
 
         .border {
-          width: 200px;
-        }
-
-        #progress {
-          font-size: 1.1rem;
+          width: 180px;
         }
 
         #progress-container {
@@ -362,27 +439,21 @@
         }
 
         #play-button {
-          padding: 12px 25px;
+          padding: 14px 28px;
           font-size: 1.1rem;
+          min-width: 160px;
         }
 
         .instructions {
-          position: fixed;
-          top: auto;
-          bottom: 150px;
-          right: 10px;
+          bottom: 130px;
+          right: 5px;
           font-size: 0.9rem;
           padding: 10px;
           max-width: 150px;
-          background: rgba(0, 0, 0, 0.7);
         }
 
         .instructions h3 {
           font-size: 1.1rem;
-        }
-
-        .instructions p {
-          line-height: 1.3;
         }
 
         #visualizer-container {
@@ -390,13 +461,41 @@
           height: 40px;
         }
 
-        .credits {
+        .audio-controls {
+          bottom: 75px;
+        }
+      }
+
+      /* Landscape Mode Adjustments */
+      @media screen and (max-height: 500px) and (orientation: landscape) {
+        .icon {
+          font-size: 24px;
+          padding: 8px;
+        }
+
+        h1 {
+          font-size: 2rem;
+        }
+
+        .instructions {
+          max-width: 200px;
           font-size: 0.9rem;
-          opacity: 0.7;
+          bottom: 80px;
+          right: 10px;
         }
 
         .audio-controls {
-          bottom: 60px;
+          bottom: 50px;
+        }
+
+        #visualizer-container {
+          bottom: 15px;
+          height: 40px;
+        }
+
+        .credits {
+          bottom: 5px;
+          font-size: 0.8rem;
         }
       }
 		</style>
