--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             font-family: 'Arial', sans-serif;
             background-color: #000;
             color: #fff;
+            position: relative;
+            width: 100vw;
+            height: 100vh;
         }
 
         .icon {
@@ -28,6 +31,10 @@
             z-index: 10;
             transition: color 0.6s;
             margin-bottom: 20px;
+            display: block;
+            position: absolute;
+            top: 10px;
+            left: 10px;
         }
 
         .icon:hover {
@@ -147,7 +154,8 @@
         #visualizer-container {
             position: absolute;
             bottom: 20px;
-            left: 20px;
+            left: 50%;
+            transform: translateX(-50%);
             z-index: 100;
             width: 300px;
             height: 60px;
@@ -186,84 +194,27 @@
         #lyrics-container {
             position: absolute;
             bottom: 150px;
-            left: 0;
-            width: 100%;
+            left: 50%;
+            transform: translateX(-50%);
             text-align: center;
             z-index: 100;
-            display: none;
-            pointer-events: none;
+            width: 80%;
         }
 
         #current-lyric {
             font-size: 2rem;
-            font-weight: 300;
-            color: #ffffff;
+            color: #fff;
             text-shadow: 0 0 10px rgba(0, 170, 255, 0.8);
             margin-bottom: 10px;
-            transition: opacity 0.5s ease, transform 0.5s ease;
         }
 
         #next-lyric {
             font-size: 1.2rem;
-            font-weight: 300;
-            color: rgba(255, 255, 255, 0.5);
-            text-shadow: 0 0 5px rgba(0, 170, 255, 0.5);
+            color: rgba(255, 255, 255, 0.7);
         }
 
-        #lyrics-editor-container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            z-index: 200;
-            width: 80%;
-            max-width: 600px;
-            display: none;
-        }
-
-        #lyrics-editor-container h2 {
-            margin-top: 0;
-            color: #00aaff;
-        }
-
-        #lyrics-editor {
-            width: 100%;
-            height: 300px;
-            background: rgba(0, 0, 0, 0.5);
-            color: #ffffff;
-            border: 1px solid #00aaff;
-            border-radius: 5px;
-            padding: 10px;
-            font-family: monospace;
-            margin-bottom: 10px;
-        }
-
-        .editor-buttons {
-            display: flex;
-            justify-content: flex-end;
-            gap: 10px;
-        }
-
-        .editor-button {
-            background: rgba(0, 170, 255, 0.2);
-            border: 1px solid #00aaff;
-            color: #ffffff;
-            padding: 5px 15px;
-            font-size: 0.9rem;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        .editor-button:hover {
-            background: rgba(0, 170, 255, 0.4);
-        }
-
-        /* Enhanced Media Queries */
-
+        /* Fixed Media Queries */
+        
         /* Large Desktop (1440px and up) */
         @media screen and (min-width: 1440px) {
             h1 {
@@ -287,10 +238,14 @@
             #next-lyric {
                 font-size: 1.5rem;
             }
+            .icon {
+                font-size: 32px;
+                padding: 15px;
+            }
         }
 
         /* Desktop (1024px - 1439px) */
-        @media screen and (max-width: 1439px) and (min-width: 1025px) {
+        @media screen and (min-width: 1025px) and (max-width: 1439px) {
             h1 {
                 font-size: 3.2rem;
                 letter-spacing: 0.9rem;
@@ -304,13 +259,17 @@
             .instructions {
                 max-width: 250px;
             }
+            .icon {
+                font-size: 30px;
+                padding: 14px;
+            }
         }
 
         /* Tablet (768px - 1024px) */
-        @media screen and (max-width: 1024px) and (min-width: 769px) {
+        @media screen and (min-width: 769px) and (max-width: 1024px) {
             .icon {
-                font-size: 34px;
-                padding: 14px;
+                font-size: 28px;
+                padding: 12px;
             }
             h1 {
                 font-size: 2.8rem;
@@ -327,9 +286,8 @@
                 font-size: 1.2rem;
             }
             .instructions {
-                font-size: 0.95rem;
+                font-size: 0.9rem;
                 max-width: 220px;
-                bottom: 160px;
             }
             #visualizer-container {
                 width: 300px;
@@ -338,95 +296,102 @@
         }
 
         /* Large Mobile (481px - 768px) */
-        @media screen and (max-width: 768px) {
+        @media screen and (min-width: 481px) and (max-width: 768px) {
             .icon {
-                font-size: 36px;
-                padding: 15px;
-                display: block;
-                text-align: center;
+                font-size: 26px;
+                padding: 10px;
             }
             h1 {
-                font-size: 2.8rem;
+                font-size: 2.5rem;
                 letter-spacing: 0.6rem;
             }
             .border {
                 width: 280px;
             }
             #progress {
-                font-size: 1.3rem;
+                font-size: 1.1rem;
             }
             #progress-container {
                 width: 300px;
             }
             #play-button {
-                padding: 16px 32px;
-                font-size: 1.3rem;
-                min-width: 200px;
+                padding: 12px 24px;
+                font-size: 1.1rem;
+                min-width: 180px;
             }
             .instructions {
-                top: auto;
-                bottom: 150px;
-                right: 15px;
-                font-size: 1.1rem;
-                padding: 15px;
-                max-width: 220px;
-                background: rgba(0, 0, 0, 0.8);
-                border: 1px solid rgba(0, 170, 255, 0.3);
-            }
-            .instructions h3 {
-                font-size: 1.4rem;
-                margin-bottom: 12px;
+                font-size: 0.8rem;
+                padding: 10px;
+                max-width: 200px;
             }
             #visualizer-container {
                 width: 280px;
                 height: 60px;
-                left: 50%;
-                transform: translateX(-50%);
-                bottom: 30px;
             }
             .credits {
+                font-size: 0.8rem;
+            }
+            #current-lyric {
+                font-size: 1.8rem;
+            }
+            #next-lyric {
                 font-size: 1rem;
-                bottom: 15px;
-                right: 15px;
             }
         }
 
         /* Medium Mobile (361px - 480px) */
-        @media screen and (max-width: 480px) {
+        @media screen and (min-width: 361px) and (max-width: 480px) {
             .icon {
-                font-size: 32px;
-                padding: 12px;
+                font-size: 22px;
+                padding: 8px;
+                top: 10px;
+                left: 10px;
             }
             h1 {
-                font-size: 2.2rem;
+                font-size: 2rem;
                 letter-spacing: 0.4rem;
             }
             .border {
                 width: 220px;
             }
             #progress {
-                font-size: 1.2rem;
+                font-size: 1rem;
             }
             #progress-container {
                 width: 280px;
             }
             #play-button {
-                padding: 15px 30px;
-                font-size: 1.2rem;
-                min-width: 180px;
+                padding: 10px 20px;
+                font-size: 1rem;
+                min-width: 160px;
             }
             .instructions {
-                bottom: 140px;
+                font-size: 0.75rem;
+                padding: 8px;
+                max-width: 160px;
+                top: 10px;
                 right: 10px;
+            }
+            .instructions h3 {
                 font-size: 1rem;
-                padding: 12px;
-                max-width: 180px;
+                margin-bottom: 8px;
             }
             #visualizer-container {
                 width: 240px;
                 height: 50px;
             }
             .credits {
+                font-size: 0.7rem;
+                bottom: 10px;
+                right: 10px;
+            }
+            #lyrics-container {
+                bottom: 120px;
+            }
+            #current-lyric {
+                font-size: 1.5rem;
+            }
+            #next-lyric {
                 font-size: 0.9rem;
             }
         }
@@ -434,8 +399,10 @@
         /* Small Mobile (up to 360px) */
         @media screen and (max-width: 360px) {
             .icon {
-                font-size: 28px;
-                padding: 10px;
+                font-size: 20px;
+                padding: 6px;
+                top: 5px;
+                left: 5px;
             }
             h1 {
                 font-size: 1.8rem;
@@ -447,59 +414,102 @@
             #progress-container {
                 width: 250px;
             }
+            #progress {
+                font-size: 0.9rem;
+            }
             #play-button {
-                padding: 14px 28px;
-                font-size: 1.1rem;
-                min-width: 160px;
+                padding: 8px 16px;
+                font-size: 0.9rem;
+                min-width: 140px;
             }
             .instructions {
-                bottom: 130px;
+                font-size: 0.7rem;
+                padding: 6px;
+                max-width: 140px;
+                top: 5px;
                 right: 5px;
+            }
+            .instructions h3 {
                 font-size: 0.9rem;
-                padding: 10px;
-                max-width: 150px;
+                margin-bottom: 6px;
             }
             #visualizer-container {
                 width: 200px;
                 height: 40px;
+                bottom: 15px;
+            }
+            .credits {
+                font-size: 0.6rem;
+                bottom: 5px;
+                right: 5px;
+            }
+            #lyrics-container {
+                bottom: 100px;
+            }
+            #current-lyric {
+                font-size: 1.3rem;
+            }
+            #next-lyric {
+                font-size: 0.8rem;
+            }
+            .audio-controls {
+                bottom: 60px;
             }
         }
 
         /* Landscape Orientation */
         @media screen and (max-height: 500px) and (orientation: landscape) {
             .icon {
-                font-size: 24px;
-                padding: 8px;
+                font-size: 20px;
+                padding: 6px;
+                top: 5px;
+                left: 5px;
             }
             h1 {
-                font-size: 2rem;
+                font-size: 1.8rem;
+                letter-spacing: 0.4rem;
+            }
+            .border {
+                width: 200px;
             }
             .instructions {
-                max-width: 200px;
-                font-size: 0.9rem;
-                bottom: 80px;
+                max-width: 180px;
+                font-size: 0.7rem;
+                bottom: 70px;
                 right: 10px;
+                top: auto;
+            }
+            .instructions h3 {
+                font-size: 0.9rem;
+                margin-bottom: 5px;
             }
             .audio-controls {
-                bottom: 50px;
+                bottom: 40px;
+            }
+            #play-button {
+                padding: 8px 16px;
+                font-size: 0.9rem;
             }
             #visualizer-container {
-                bottom: 15px;
-                height: 40px;
+                bottom: 10px;
+                height: 30px;
                 width: 250px;
             }
             .credits {
                 bottom: 5px;
-                font-size: 0.8rem;
+                font-size: 0.7rem;
             }
             #lyrics-container {
-                bottom: 100px;
+                bottom: 80px;
             }
             #current-lyric {
-                font-size: 1.8rem;
+                font-size: 1.5rem;
             }
             #next-lyric {
-                font-size: 1rem;
+                font-size: 0.9rem;
+            }
+            #progress-container {
+                width: 250px;
             }
         }
 
@@ -508,41 +518,21 @@
             .border {
                 height: 3px;
             }
-            #progress-bar {
+            #progress-bar-container {
                 height: 5px;
             }
             #play-button {
                 border-width: 3px;
             }
         }
-
-        /* Very small devices (below 320px) */
-        @media screen and (max-width: 320px) {
-            .icon {
-                font-size: 24px;
-            }
-            h1 {
-                font-size: 1.6rem;
-                letter-spacing: 0.2rem;
-            }
-            .border {
-                width: 160px;
-            }
-            #progress-container {
-                width: 220px;
-            }
-            #play-button {
-                padding: 12px 24px;
-                font-size: 1rem;
-                min-width: 140px;
-            }
-            #visualizer-container {
-                width: 180px;
-                height: 35px;
-            }
-        }
     </style>
-    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <!-- Preload critical resources -->
+    <link rel="preload" href="https://unpkg.com/three@v0.163.0/build/three.module.js" as="script">
+    <link rel="preload" href="public/collinship/collin.gltf" as="fetch" crossorigin>
+    <link rel="preload" href="xandermix.mp3" as="audio">
+    
+    <!-- Defer non-critical scripts -->
+    <script defer src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
         {
             "imports": {
@@ -580,13 +570,14 @@
         <div id="current-lyric"></div>
         <div id="next-lyric"></div>
     </div>
-    <audio id="audio-player" loop crossOrigin="anonymous">
+    <audio id="audio-player" loop crossOrigin="anonymous" preload="metadata">
         <source src="xandermix.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
     <div class="credits">
         <div>3D Website Created & Developed by Collin Xander</div>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./main-optimized.js"></script>
 </body>
 </html>
+
