--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           background-color: #000;
           color: #fff;
           position: relative;
-          width: 100vw;
+          width: ❤️vw;
           height: 100vh;
       }
 
@@ -319,6 +319,9 @@
               font-size: 1.1rem;
               min-width: 180px;
           }
+          .audio-controls {
+              bottom: 100px; /* Adjusted */
+          }
           .instructions {
               font-size: 0.8rem;
               padding: 10px;
@@ -364,6 +367,9 @@
               padding: 10px 20px;
               font-size: 1rem;
               min-width: 160px;
+          }
+          .audio-controls {
+              bottom: 140px; /* Adjusted */
           }
           .instructions {
               font-size: 0.75rem;
@@ -422,6 +428,9 @@
               font-size: 0.9rem;
               min-width: 140px;
           }
+          .audio-controls {
+              bottom: 80px; /* Adjusted */
+          }
           .instructions {
               font-size: 0.7rem;
               padding: 6px;
@@ -451,9 +460,6 @@
           }
           #next-lyric {
               font-size: 0.8rem;
-          }
-          .audio-controls {
-              bottom: 60px;
           }
       }
 
@@ -574,4 +580,3 @@
   <script type="module" src="./main.js"></script>
 </body>
 </html>
-
