--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           background-color: #000;
           color: #fff;
           position: relative;
-          width: ❤️vw;
+          width: 100vw; /* Fixed typo */
           height: 100vh;
       }
 
@@ -302,8 +302,8 @@
               padding: 10px;
           }
           h1 {
-              font-size: 2.5rem;
-              letter-spacing: 0.6rem;
+              font-size: 2rem; /* Reduced from 2.5rem */
+              letter-spacing: 0.5rem; /* Reduced from 0.6rem */
           }
           .border {
               width: 280px;
@@ -320,12 +320,12 @@
               min-width: 180px;
           }
           .audio-controls {
-              bottom: 100px; /* Adjusted */
+              bottom: 100px;
           }
           .instructions {
-              font-size: 0.8rem;
-              padding: 10px;
-              max-width: 200px;
+              font-size: 0.7rem; /* Reduced from 0.8rem */
+              padding: 8px; /* Reduced from 10px */
+              max-width: 180px; /* Reduced from 200px */
           }
           #visualizer-container {
               width: 280px;
@@ -351,8 +351,8 @@
               left: 10px;
           }
           h1 {
-              font-size: 2rem;
-              letter-spacing: 0.4rem;
+              font-size: 1.6rem; /* Reduced from 2rem */
+              letter-spacing: 0.3rem; /* Reduced from 0.4rem */
           }
           .border {
               width: 220px;
@@ -369,17 +369,17 @@
               min-width: 160px;
           }
           .audio-controls {
-              bottom: 140px; /* Adjusted */
+              bottom: 140px;
           }
           .instructions {
-              font-size: 0.75rem;
-              padding: 8px;
-              max-width: 160px;
+              font-size: 0.65rem; /* Reduced from 0.75rem */
+              padding: 6px; /* Reduced from 8px */
+              max-width: 140px; /* Reduced from 160px */
               top: 10px;
               right: 10px;
           }
           .instructions h3 {
-              font-size: 1rem;
+              font-size: 0.9rem; /* Reduced from 1rem */
               margin-bottom: 8px;
           }
           #visualizer-container {
@@ -411,8 +411,8 @@
               left: 5px;
           }
           h1 {
-              font-size: 1.8rem;
-              letter-spacing: 0.3rem;
+              font-size: 1.4rem; /* Reduced from 1.8rem */
+              letter-spacing: 0.2rem; /* Reduced from 0.3rem */
           }
           .border {
               width: 180px;
@@ -429,17 +429,17 @@
               min-width: 140px;
           }
           .audio-controls {
-              bottom: 80px; /* Adjusted */
+              bottom: 80px;
           }
           .instructions {
-              font-size: 0.7rem;
-              padding: 6px;
-              max-width: 140px;
+              font-size: 0.6rem; /* Reduced from 0.7rem */
+              padding: 5px; /* Reduced from 6px */
+              max-width: 120px; /* Reduced from 140px */
               top: 5px;
               right: 5px;
           }
           .instructions h3 {
-              font-size: 0.9rem;
+              font-size: 0.8rem; /* Reduced from 0.9rem */
               margin-bottom: 6px;
           }
           #visualizer-container {
